<resources>
    <string name="app_name">FortuneTeller</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="wishone">You will get a 12 on all of your exams ✔</string>
    <string name="wishtwo">A friend asks only for your time not your money.</string>
    <string name="wishthree">A smile is your passport into the hearts of others.</string>
    <string name="wishfour">You learn from your mistakes. You will learn a lot today.</string>
    <string name="wishfive">Never give up. Youre not a failure if you dont give up.</string>
    <string name="wishsix">You will marry your lover.</string>
    <string name="wishseven">You already know the answer to the questions lingering inside your head.</string>
    <string name="wisheight">Keep your eye out for someone special.</string>
    <string name="wishnine">Its amazing how much good you can do if you dont care who gets the credit.</string>
    <string name="wishten">Your feet are smelly.</string>

    <string name="menutitle">My Menu</string>
    <string name="menuOne">Home</string>
    <string name="menuTwo">Spin wheel</string>
    <string name="menuThree">Crystal ball</string>
    <string name="onlinetitle">Get wishes online</string>
    <string name="onlinewish">Get online wish</string>
    <string name="clear">Clear</string>
</resources>
