<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showin="navigation_view">

    <group android:checkableBehavior="single"/>
        <item android:title="@string/menutitle">
        <menu>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_64dp"
            android:title="@string/menuOne"/>

        <item
            android:id="@+id/wheel"
            android:icon="@drawable/roulette_64dp"
            android:title="@string/menuTwo"
            />
        <item
            android:id="@+id/crystalball"
            android:icon="@drawable/crystal_ball_64dp"
            android:title="@string/menuThree"/></menu>
        </item>

    <item android:title="@string/onlinetitle">
    <menu> <item
        android:id="@+id/onlinewish"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/onlinewish"/></menu>
</item>
</menu>